<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/_10sdp"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_30sdp"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@color/colorAccent"
            >
            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:text="@string/titleVohieuhoa"
                android:textStyle="bold"
                android:layout_gravity="center"
                />
            <ImageView
                android:id="@+id/dialog_imgCancel"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/cancel7"
                android:layout_gravity="center|right"
                android:layout_marginRight="@dimen/_10sdp"
                />
        </FrameLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                    <TextView
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titleVohieuhoa"
                        android:textSize="@dimen/_14ssp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColor="@color/colorAccent"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Noidugnvohieuhoa"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_5sdp"
                        />
                <TextView
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cacbuoc"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/colorAccent"
                    />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Buoc1"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_5sdp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Buoc2"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_5sdp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Buoc3"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/_5sdp"
                        />
                    <CheckBox
                        android:id="@+id/dialogcheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dongytatca"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:button="@drawable/checkboxcustomtow"
                        />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:id="@+id/LinearLayoutCheck"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_4sdp"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        >
                        <Button
                            android:id="@+id/dialog_btnHuy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Không"
                            android:background="@color/black"
                            android:textColor="@color/white"
                            android:inputType="text"
                            android:textSize="@dimen/_12ssp"
                            />
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_4sdp"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        >
                        <Button
                            android:id="@+id/dialog_btndongy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Đồng ý"
                            android:background="@color/colorAccent"
                            android:textColor="@color/white"
                            android:padding="@dimen/_5sdp"
                            android:inputType="text"
                            android:textSize="@dimen/_12ssp"
                            />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.cardview.widget.CardView>
