<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.All_prduct_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2sdp"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:text="@string/Sanpham"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    />

                <FrameLayout
                    android:id="@+id/FrameLayout_giohang"
                    android:layout_gravity="center|right"
                    android:layout_width="55dp"
                    android:layout_height="?attr/actionBarSize"
                    >
                    <com.nex3z.notificationbadge.NotificationBadge
                        android:id="@+id/menusl"
                        android:visibility="gone"
                        android:layout_gravity="top|right"
                        android:layout_width="28dp"
                        android:layout_height="28dp"/>
                    <ImageView
                        android:layout_marginTop="15dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/giohang"/>
                </FrameLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >
                        <LinearLayout
                            android:id="@+id/LinearLayout_sapxep"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:background="#E5E5E5"
                            >
                            <TextView
                                android:layout_marginLeft="@dimen/_2sdp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sapxeptheo"
                                android:textColor="@color/black"
                                android:layout_gravity="center"
                                android:textSize="@dimen/_10ssp"
                                />
                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="@dimen/_4sdp"
                                android:padding="@dimen/_4sdp"
                                android:layout_marginVertical="@dimen/_3sdp"
                                android:layout_marginHorizontal="@dimen/_2sdp"
                                >
                                <Button
                                    android:background="@color/white"
                                    android:textColor="@color/black"
                                    android:layout_width="wrap_content"
                                    android:layout_height="@dimen/_30sdp"
                                    android:id="@+id/btn_getall"
                                    android:textSize="@dimen/_9ssp"
                                    android:text="@string/moinhat"
                                    android:inputType="text"
                                    />
                            </androidx.cardview.widget.CardView>
                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="@dimen/_4sdp"
                                android:padding="@dimen/_4sdp"
                                android:layout_marginVertical="@dimen/_3sdp"
                                android:layout_marginHorizontal="@dimen/_2sdp"
                                >
                                <Button
                                    android:background="@color/white"
                                    android:textColor="@color/black"
                                    android:layout_width="wrap_content"
                                    android:layout_height="@dimen/_30sdp"
                                    android:id="@+id/btncunhat"
                                    android:textSize="@dimen/_9ssp"
                                    android:text="@string/cunhat"
                                    android:inputType="text"
                                    />
                            </androidx.cardview.widget.CardView>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                >
                                <androidx.cardview.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/_30sdp"
                                    app:cardCornerRadius="@dimen/_4sdp"
                                    android:padding="@dimen/_4sdp"
                                    android:layout_marginVertical="@dimen/_3sdp"
                                    android:layout_marginHorizontal="@dimen/_2sdp"
                                    android:id="@+id/card1"
                                    android:visibility="visible"
                                    >
                                    <Button
                                        android:id="@+id/ClickGiasapxep"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:background="@color/white"
                                        android:drawableRight="@drawable/xuong"
                                        android:gravity="left|center"
                                        android:inputType="text"
                                        android:padding="@dimen/_3sdp"
                                        android:text="@string/gia"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/_9ssp"
                                        android:visibility="visible" />
                                </androidx.cardview.widget.CardView>
                                <androidx.cardview.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/_30sdp"
                                    app:cardCornerRadius="@dimen/_4sdp"
                                    android:padding="@dimen/_4sdp"
                                    android:layout_marginVertical="@dimen/_3sdp"
                                    android:layout_marginHorizontal="@dimen/_2sdp"
                                    android:id="@+id/card2"
                                    >
                                    <Button
                                        android:visibility="gone"
                                        android:id="@+id/ClickGia2sapxep"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:background="@color/white"
                                        android:gravity="left|center"
                                        android:inputType="text"
                                        android:padding="@dimen/_3sdp"
                                        android:text="@string/gia"
                                        android:drawableRight="@drawable/xuong"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/_9ssp" />
                                </androidx.cardview.widget.CardView>

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_40sdp"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <androidx.cardview.widget.CardView
                        android:id="@+id/CardGia3"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_2sdp"
                        app:cardCornerRadius="@dimen/_4sdp"
                        >
                        <LinearLayout
                            android:layout_width="@dimen/_110sdp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="#E5E5E5"
                            >
                            <TextView
                                android:id="@+id/txtGiathapdencao"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/gia1"
                                android:padding="@dimen/_5sdp"
                                android:textColor="@color/black"
                                android:background="@drawable/btn_background_canhan"
                                android:layout_margin="@dimen/_1sdp"
                                />
                            <TextView
                                android:id="@+id/txtGiacaodenthap"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/gia2"
                                android:layout_marginHorizontal="@dimen/_1sdp"
                                android:padding="@dimen/_5sdp"
                                android:textColor="@color/black"
                                android:background="@drawable/btn_background_canhan"
                                />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/RefeshLayout"
                                >
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/RecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="16dp"
                            />
                            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
                </FrameLayout>
            </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >
        <com.ismaeldivita.chipnavigation.ChipNavigationBar
            android:id="@+id/navigationAdmin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/menucustom"
            app:cnb_menuResource="@menu/menu_admin"
            app:cnb_iconColor="@color/white"
            app:cnb_unselectedColor="@color/white"
            />
        <com.ismaeldivita.chipnavigation.ChipNavigationBar
            android:id="@+id/navigationUser"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/menucustom"
            app:cnb_menuResource="@menu/menu"
            app:cnb_iconColor="@color/white"
            app:cnb_unselectedColor="@color/white"
            />

    </LinearLayout>
</RelativeLayout>